# amplifier-bundle-cua

./: .gitignore  README.md  bundle.md  pyproject.toml
agents/: cua-operator.md  cua-planner.md
behaviors/: cua-core.yaml  cua-operator.yaml  cua-recipes.yaml
context/: action-confidence.md  dual-world-reasoning.md  recovery-patterns.md
docs/plans/: 2026-03-06-amplifier-bundle-cua-design.md  2026-03-08-amplifier-bundle-cua-implementation.md
modules/tool-cua/: pyproject.toml
modules/tool-cua/amplifier_module_tool_cua/: __init__.py  models.py  target.py  tool.py
modules/tool-cua/amplifier_module_tool_cua/backends/: __init__.py  fixture.py  linux.py  macos.py  registry.py  windows.py
recipes/: bounded-task.yaml  observe-and-act.yaml  recovery-workflow.yaml
tests/: conftest.py  test_conformance.py  test_fixture_backend.py  test_integration.py  test_macos_backend.py  test_models.py  test_mount.py  test_registry.py  test_smoke.py  test_stubs.py  test_target_protocol.py  test_tool.py
