[project]
name = "amplifier-bundle-cua"
version = "0.1.0"
description = "Amplifier bundle for computer-use automation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[tool.uv.workspace]
members = [
    "modules/tool-cua",
]

[tool.uv.sources]
tool-cua = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "tool-cua",
]
